--- a/src/global.css
+++ b/src/global.css
@@ -63,7 +63,7 @@
   /* letter-spacing: 0px; */
 }
 .tat-body-2-para {
-  /* font-weight: 600; */
+  font-weight: 600;
   font-size: 14px;
   line-height: 23px;
   font-family: NeueHaasDisplay, Montserrat;
