--- a/src/global.css
+++ b/src/global.css
@@ -22,35 +22,12 @@
   font-family: Montserrat-Black, Montserrat;
 }
 
-.font-neueLight {
-  font-family: NeueHaasDisplay, Montserrat;
-  font-weight: 300;
-}
-.font-neueRegular {
-  font-family: NeueHaasDisplay, Montserrat;
-  font-weight: 400;
-}
-.font-neueMedium {
-  font-family: NeueHaasDisplay, Montserrat;
-  font-weight: 500;
-}
-.font-neueSemibold {
-  font-family: NeueHaasDisplay, Montserrat;
-  font-weight: 600;
-}
-.font-neueBold {
-  font-family: NeueHaasDisplay, Montserrat;
-  font-weight: 700;
-}
-.font-neueBlack {
-  font-family: NeueHaasDisplay, Montserrat;
-  font-weight: 900;
+.italicMontserratMedium {
+  font-family: Montserrat-Medium, Montserrat;
+  font-style: italic;
 }
 
-.font-neue {
-  font-family: NeueHaasDisplay, Montserrat;
-}
-
+/* 
 .sheet-title {
   @apply text-[38px] font-bold leading-[36px] tracking-[-0.5px] text-foreground;
 }
@@ -60,56 +37,42 @@
 }
 
 .tat-body-1 {
-  /* font-weight: 600; */
   font-size: 16px;
   line-height: 23px;
   font-family: NeueHaasDisplay, Montserrat;
-  /* letter-spacing: 0px; */
 }
 .tat-body-2-para {
   font-weight: 600;
   font-size: 14px;
   line-height: 23px;
   font-family: NeueHaasDisplay, Montserrat;
-  /* letter-spacing: 0%; */
 }
 .tat-body-2-light {
-  /* font-weight: 400; */
   font-size: 14px;
   line-height: 23px;
-  /* color: #a49a99; */
   font-family: NeueHaasDisplay, Montserrat;
-  /* letter-spacing: 0%; */
 }
 .tat-body-2-med {
-  /* font-weight: 500; */
   font-size: 14px;
   line-height: 23px;
   font-family: Montserrat-Medium, Montserrat;
-  /* letter-spacing: 0%; */
 }
 .ta-body-2-semibold {
-  /* font-weight: 600; */
   font-size: 14px;
   line-height: 23px;
   font-family: Montserrat-SemiBold, Montserrat;
-  /* letter-spacing: 0%; */
 }
 
 .ta-body-3-button-text {
-  /* font-weight: 600; */
   font-size: 12px;
   line-height: 23px;
   font-family: Montserrat-SemiBold, Montserrat;
-  /* letter-spacing: 0%; */
 }
 
 .ta-body-4 {
-  /* font-weight: 600; */
   font-size: 11px;
   line-height: 130%;
   font-family: Montserrat-SemiBold, Montserrat;
-  /* letter-spacing: 0%; */
   background-color: #00000093;
 }
 
@@ -119,7 +82,7 @@
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 23px; /* 164.286% */
+  line-height: 23px;
 }
 
 .bold-montserrat-18 {
@@ -143,7 +106,7 @@
 }
 
 
-
+ */
 
 
 
